syntax = "proto3";

message BlockHeader {
    // Consensus Critical
    repeated bytes previousHash = 1;
    bytes merkleRoot = 2;
    bytes stateRoot = 3; 
    double difficulty = 4;
    uint64 timeStamp = 5; 
    uint64 nonce = 6;
    bytes miner = 7;
}

message GenesisHeader {
    repeated bytes previousHash = 1;
    bytes merkleRoot = 2;
    bytes stateRoot = 3; 
    double difficulty = 4;
    uint64 timeStamp = 5; 
    bytes miner = 7;
}

message HeaderPrehash {
    repeated bytes previousHash = 1;
    bytes merkleRoot = 2;
    bytes stateRoot = 3; 
    double difficulty = 4;
    uint64 timeStamp = 5;
    bytes miner = 7;
}
